force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>Need to Deprectate this object and update associated classes that reference it
TestmyNewQuota
BuildTestData
importDataFromCSVController</description>
    <label>Quota</label>
    <nameField>
        <displayFormat>Quota - {0000000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>