force-app/main/default/objects/Quota__c/fields/Assigned_Accounts_Quota__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Accounts_Quota__c</fullName>
    <description>Account Focus PJ or Territory Product focus DS/IFP</description>
    <label>RBM_TM Assigned Accounts Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>