force-app/main/default/objects/Quota__c/fields/Assigned_Quota__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Quota__c</fullName>
    <label>Quota Assigned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>