force-app/main/default/objects/Quota__c/fields/Product_Focus_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Product_Focus_Attainment__c</fullName>
    <label>Product Focus Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>