force-app/main/default/objects/Quota__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>