force-app/main/default/objects/Quota__c/fields/Quota_1__c.field-meta.xml
<CustomField>
    <fullName>Quota_1__c</fullName>
    <description>This is the account quota or territory National #</description>
    <label>Quota 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>