force-app/main/default/objects/Quota__c/fields/Quota_POS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_POS_End_Date__c</fullName>
    <label>Quota POS End Date</label>
    <type>Date</type>
</CustomField>