force-app/main/default/objects/Quota__c/fields/QuotaPOSdaterange__c.field-meta.xml
<CustomField>
    <fullName>QuotaPOSdaterange__c</fullName>
    <formula>&quot;dateRange([&quot;&amp;text(year(QuotaPOSStartDat__c))&amp;&quot;,&quot;&amp;text(month(QuotaPOSStartDat__c))&amp;&quot;,&quot;&amp;text(day(QuotaPOSStartDat__c))&amp;&quot;], [&quot;&amp;text(year(Quota_POS_End_Date__c))&amp;&quot;,&quot;&amp;text(month(Quota_POS_End_Date__c))&amp;&quot;,&quot;&amp;text(day(Quota_POS_End_Date__c))&amp;&quot;])&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuotaPOSdaterange</label>
    <type>Text</type>
</CustomField>