force-app/main/default/objects/Quota__c/fields/QuotaPOSStartDat__c.field-meta.xml
<CustomField>
    <fullName>QuotaPOSStartDat__c</fullName>
    <label>Quota POS Start Date</label>
    <type>Date</type>
</CustomField>