force-app/main/default/objects/Quota__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quota</relationshipName>
    <type>Lookup</type>
</CustomField>