force-app/main/default/objects/Quota__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <label>SalesRep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>