force-app/main/default/objects/Quota__c/fields/SPG_Attainment__c.field-meta.xml
<CustomField>
    <fullName>SPG_Attainment__c</fullName>
    <label>SPG Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>