force-app/main/default/objects/Quota__c/fields/SPG_Quota__c.field-meta.xml
<CustomField>
    <fullName>SPG_Quota__c</fullName>
    <label>SPG Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>