force-app/main/default/objects/Quota__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account PJ</fullName>
            </value>
            <value>
                <fullName>Account IFP/DS</fullName>
            </value>
            <value>
                <fullName>Account LCD</fullName>
            </value>
            <value>
                <fullName>Account Product</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Territory PF PJ</fullName>
            </value>
            <value>
                <fullName>Territory PF IFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>