force-app/main/default/objects/Quota__c/recordTypes/Account_Based.recordType-meta.xml
<RecordType>
    <fullName>Account_Based</fullName>
    <active>true</active>
    <description>Account Based Layout</description>
    <label>Account Based</label>
</RecordType>