force-app/main/default/objects/Quota__c/recordTypes/National_Accounts.recordType-meta.xml
<RecordType>
    <fullName>National_Accounts</fullName>
    <active>true</active>
    <label>National Accounts</label>
</RecordType>