force-app/main/default/objects/Quota__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>Record Type by User</description>
    <label>User</label>
</RecordType>