force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Quota_Attained__c</columns>
    <columns>Type__c</columns>
    <columns>Team__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>